--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,26 @@
 
-
 form {
   height: 200px;
 }
 
 .formulario {
   height: 200px;
+}
+
+
+.card-body {
+  width: 100%;
+  height: 100%;
+}
+
+.cajaColor {
+  background-color: red;
+  width: 100%;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+}
+
+.card-footer {
+  width: 100%;
 }
