--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ form {
 .card-body {
   width: 100%;
   height: 100%;
+  box-shadow: 10px 10px 30px 0px rgba(170, 84, 84, 0.878);
 }
 
 .cajaColor {
